src/compiler/v1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMENTARIO
    CTE_ENTERA_ERR
    CTE_REAL_ERR
    CTE_REAL_ERR2
    FIN_ERR
    INICIO_ERR
    POTENCIA_ERR
    PROGRAMA_ERR
    TIPO_ERR
    newline

Grammar

Rule 0     S' -> program
Rule 1     program -> constantes variables protfuncproc funcproc PROGRAMA block FIN DE PROGRAMA PUNTO
Rule 2     variables -> VARIABLES gpovars
Rule 3     variables -> empty
Rule 4     gpovars -> gpoids PUNTOS_DOBLES TIPO PUNTO_COMA gpovars
Rule 5     gpovars -> gpoids PUNTOS_DOBLES TIPO PUNTO_COMA
Rule 6     gpovars -> empty
Rule 7     gpovars -> gpoids error TIPO PUNTO_COMA gpovars
Rule 8     gpovars -> gpoids error TIPO PUNTO_COMA
Rule 9     gpovars -> gpoids PUNTOS_DOBLES error PUNTO_COMA gpovars
Rule 10    gpovars -> gpoids PUNTOS_DOBLES error PUNTO_COMA
Rule 11    gpoids -> IDENT COMA gpoidsinner
Rule 12    gpoids -> IDENT opasig COMA gpoidsinner
Rule 13    gpoids -> IDENT dimens COMA gpoidsinner
Rule 14    gpoids -> IDENT dimens
Rule 15    gpoidsinner -> IDENT COMA gpoidsinner
Rule 16    gpoidsinner -> IDENT opasig COMA gpoidsinner
Rule 17    gpoidsinner -> IDENT
Rule 18    gpoidsinner -> IDENT dimens COMA gpoidsinner
Rule 19    gpoidsinner -> IDENT dimens
Rule 20    gpoids -> empty
Rule 21    gpoidsinner -> empty
Rule 22    gpoids -> IDENT dimens error gpoids
Rule 23    gpoids -> IDENT error gpoids
Rule 24    gpoids -> IDENT opasig error gpoids
Rule 25    dimens -> CORCHETE_EMPIEZA valor CORCHETE_TERMINA dimens
Rule 26    dimens -> empty
Rule 27    dimens -> CORCHETE_EMPIEZA valor error dimens
Rule 28    dimens -> error valor CORCHETE_TERMINA dimens
Rule 29    opasig -> OP_ASIG CTE_ENTERA
Rule 30    opasig -> OP_ASIG IDENT
Rule 31    opasig -> empty
Rule 32    valor -> exprlog
Rule 33    constantes -> CONSTANTES gpoconst
Rule 34    constantes -> empty
Rule 35    gpoconst -> IDENT OP_ASIG CTE_ENTERA PUNTO_COMA
Rule 36    gpoconst -> IDENT OP_ASIG CTE_ENTERA PUNTO_COMA gpoconst
Rule 37    gpoconst -> IDENT OP_ASIG CTE_REAL PUNTO_COMA
Rule 38    gpoconst -> IDENT OP_ASIG CTE_REAL PUNTO_COMA gpoconst
Rule 39    gpoconst -> empty
Rule 40    protfuncproc -> PROTOTIPOS gpofuncproc FIN DE PROTOTIPOS PUNTO_COMA
Rule 41    protfuncproc -> empty
Rule 42    gpofuncproc -> protfunc
Rule 43    gpofuncproc -> protproc
Rule 44    gpofuncproc -> protproc gpofuncproc
Rule 45    gpofuncproc -> protfunc gpofuncproc
Rule 46    protfunc -> FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO PUNTO_COMA
Rule 47    protfunc -> FUNCION error PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO PUNTO_COMA
Rule 48    protproc -> PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTO_COMA
Rule 49    protproc -> empty
Rule 50    protproc -> PROCEDIMIENTO error PAREN_EMPIEZA params PAREN_TERMINA PUNTO_COMA
Rule 51    params -> gpopars PUNTOS_DOBLES TIPO params2
Rule 52    params -> empty
Rule 53    params -> gpopars PUNTOS_DOBLES error params2
Rule 54    params -> gpopars error TIPO params2
Rule 55    params2 -> PUNTO_COMA params
Rule 56    params2 -> empty
Rule 57    gpopars -> IDENT COMA gpopars2
Rule 58    gpopars -> IDENT
Rule 59    gpopars2 -> IDENT COMA gpopars2
Rule 60    gpopars2 -> IDENT
Rule 61    funcproc -> procedimiento funcproc
Rule 62    funcproc -> funcion funcproc
Rule 63    funcproc -> empty
Rule 64    procedimiento -> PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA
Rule 65    funcion -> FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA
Rule 66    block -> estatuto PUNTO_COMA block
Rule 67    block -> estatuto PUNTO_COMA
Rule 68    block -> estatuto error
Rule 69    block -> estatuto error block
Rule 70    estatuto -> si
Rule 71    estatuto -> lfunc
Rule 72    estatuto -> LIMPIA
Rule 73    estatuto -> desde
Rule 74    estatuto -> repetir
Rule 75    estatuto -> mientras
Rule 76    estatuto -> cuando
Rule 77    estatuto -> regresa
Rule 78    estatuto -> asigna
Rule 79    estatuto -> imprime
Rule 80    estatuto -> imprimenl
Rule 81    estatuto -> lee
Rule 82    estatuto -> INTERRUMPE
Rule 83    estatuto -> CONTINUA
Rule 84    estatuto -> empty
Rule 85    si -> SI PAREN_EMPIEZA exprlog PAREN_TERMINA HACER bckesp sino
Rule 86    sino -> SINO bckesp
Rule 87    sino -> empty
Rule 88    bckesp -> estatuto
Rule 89    bckesp -> INICIO block FIN
Rule 90    bckesp -> empty
Rule 91    desde -> DESDE EL VALOR DE asigna HASTA expr DECR CTE_ENTERA bckesp
Rule 92    desde -> DESDE EL VALOR DE asigna HASTA expr INCR CTE_ENTERA bckesp
Rule 93    desde -> DESDE EL VALOR DE asigna HASTA expr error bckesp
Rule 94    repetir -> REPETIR block HASTA QUE PAREN_EMPIEZA exprlog PAREN_TERMINA
Rule 95    mientras -> MIENTRAS SE CUMPLA QUE exprlog bckesp
Rule 96    asigna -> IDENT udim OP_ASIG exprlog
Rule 97    cuando -> CUANDO EL VALOR DE IDENT INICIO gposea otro FIN
Rule 98    otro -> OTRO PUNTOS_DOBLES bckesp
Rule 99    otro -> empty
Rule 100   gposea -> SEA gpoconst PUNTOS_DOBLES bckesp gposea
Rule 101   gposea -> empty
Rule 102   gpoconst -> CTE_ALFA gpoconst2
Rule 103   gpoconst3 -> CTE_ALFA gpoconst2
Rule 104   gpoconst2 -> COMA gpoconst3
Rule 105   gpoconst2 -> empty
Rule 106   regresa -> REGRESA PAREN_EMPIEZA exprlog PAREN_TERMINA
Rule 107   udim -> CORCHETE_EMPIEZA expr CORCHETE_TERMINA udim
Rule 108   udim -> empty
Rule 109   exprlog -> opy
Rule 110   exprlog -> opy O exprlog
Rule 111   opy -> opno
Rule 112   opy -> opno Y opy
Rule 113   opno -> oprel
Rule 114   opno -> NO oprel
Rule 115   oprel -> expr
Rule 116   oprel -> expr OP_REL oprel
Rule 117   expr -> multi
Rule 118   expr -> multi MAS expr
Rule 119   expr -> multi MENOS expr
Rule 120   multi -> expo
Rule 121   multi -> expo MULTI multi
Rule 122   multi -> expo DIV multi
Rule 123   multi -> expo MOD multi
Rule 124   multi -> empty
Rule 125   expo -> signo
Rule 126   expo -> signo POTENCIA expo
Rule 127   signo -> termino
Rule 128   signo -> MENOS termino
Rule 129   termino -> IDENT
Rule 130   termino -> CTE_ENTERA
Rule 131   termino -> CTE_REAL
Rule 132   termino -> CTE_ALFA
Rule 133   termino -> VERDADERO
Rule 134   termino -> FALSO
Rule 135   termino -> <empty>
Rule 136   termino -> IDENT udim
Rule 137   termino -> lfunc
Rule 138   lfunc -> IDENT PAREN_EMPIEZA uparams PAREN_TERMINA
Rule 139   lfunc -> IDENT PAREN_EMPIEZA error PAREN_TERMINA
Rule 140   imprime -> IMPRIME begin gpoexp PAREN_TERMINA
Rule 141   begin -> PAREN_EMPIEZA
Rule 142   imprime -> IMPRIME error gpoexp PAREN_TERMINA
Rule 143   imprime -> IMPRIME begin gpoexp error
Rule 144   imprimenl -> IMPRIMENL begin gpoexp PAREN_TERMINA
Rule 145   imprimenl -> IMPRIMENL begin gpoexp error
Rule 146   imprimenl -> IMPRIMENL error gpoexp PAREN_TERMINA
Rule 147   lee -> LEE PAREN_EMPIEZA IDENT PAREN_TERMINA
Rule 148   lee -> LEE PAREN_EMPIEZA IDENT dimens PAREN_TERMINA
Rule 149   gpoexp -> exprlog
Rule 150   gpoexp -> exprlog COMA gpoexp
Rule 151   uparams -> exprlog
Rule 152   uparams -> exprlog COMA uparams
Rule 153   empty -> <empty>

Terminals, with rules where they appear

COMA                 : 11 12 13 15 16 18 57 59 104 150 152
COMENTARIO           : 
CONSTANTES           : 33
CONTINUA             : 83
CORCHETE_EMPIEZA     : 25 27 107
CORCHETE_TERMINA     : 25 28 107
CTE_ALFA             : 102 103 132
CTE_ENTERA           : 29 35 36 91 92 130
CTE_ENTERA_ERR       : 
CTE_REAL             : 37 38 131
CTE_REAL_ERR         : 
CTE_REAL_ERR2        : 
CUANDO               : 97
CUMPLA               : 95
DE                   : 1 40 64 65 91 92 93 97
DECR                 : 91
DESDE                : 91 92 93
DIV                  : 122
EL                   : 91 92 93 97
FALSO                : 134
FIN                  : 1 40 64 65 89 97
FIN_ERR              : 
FUNCION              : 46 47 65 65
HACER                : 85
HASTA                : 91 92 93 94
IDENT                : 11 12 13 14 15 16 17 18 19 22 23 24 30 35 36 37 38 46 48 57 58 59 60 64 65 96 97 129 136 138 139 147 148
IMPRIME              : 140 142 143
IMPRIMENL            : 144 145 146
INCR                 : 92
INICIO               : 64 65 89 97
INICIO_ERR           : 
INTERRUMPE           : 82
LEE                  : 147 148
LIMPIA               : 72
MAS                  : 118
MENOS                : 119 128
MIENTRAS             : 95
MOD                  : 123
MULTI                : 121
NO                   : 114
O                    : 110
OP_ASIG              : 29 30 35 36 37 38 96
OP_REL               : 116
OTRO                 : 98
PAREN_EMPIEZA        : 46 47 48 50 64 65 85 94 106 138 139 141 147 148
PAREN_TERMINA        : 46 47 48 50 64 65 85 94 106 138 139 140 142 144 146 147 148
POTENCIA             : 126
POTENCIA_ERR         : 
PROCEDIMIENTO        : 48 50 64 64
PROGRAMA             : 1 1
PROGRAMA_ERR         : 
PROTOTIPOS           : 40 40
PUNTO                : 1
PUNTOS_DOBLES        : 4 5 9 10 46 47 51 53 65 98 100
PUNTO_COMA           : 4 5 7 8 9 10 35 36 37 38 40 46 47 48 50 55 64 65 66 67
QUE                  : 94 95
REGRESA              : 106
REPETIR              : 94
SE                   : 95
SEA                  : 100
SI                   : 85
SINO                 : 86
TIPO                 : 4 5 7 8 46 47 51 54 65
TIPO_ERR             : 
VALOR                : 91 92 93 97
VARIABLES            : 2
VERDADERO            : 133
Y                    : 112
error                : 7 8 9 10 22 23 24 27 28 47 50 53 54 68 69 93 139 142 143 145 146
newline              : 

Nonterminals, with rules where they appear

asigna               : 78 91 92 93
bckesp               : 85 86 91 92 93 95 98 100
begin                : 140 143 144 145
block                : 1 64 65 66 69 89 94
constantes           : 1
cuando               : 76
desde                : 73
dimens               : 13 14 18 19 22 25 27 28 148
empty                : 3 6 20 21 26 31 34 39 41 49 52 56 63 84 87 90 99 101 105 108 124
estatuto             : 66 67 68 69 88
expo                 : 120 121 122 123 126
expr                 : 91 92 93 107 115 116 118 119
exprlog              : 32 85 94 95 96 106 110 149 150 151 152
funcion              : 62
funcproc             : 1 61 62
gpoconst             : 33 36 38 100
gpoconst2            : 102 103
gpoconst3            : 104
gpoexp               : 140 142 143 144 145 146 150
gpofuncproc          : 40 44 45
gpoids               : 4 5 7 8 9 10 22 23 24
gpoidsinner          : 11 12 13 15 16 18
gpopars              : 51 53 54
gpopars2             : 57 59
gposea               : 97 100
gpovars              : 2 4 7 9
imprime              : 79
imprimenl            : 80
lee                  : 81
lfunc                : 71 137
mientras             : 75
multi                : 117 118 119 121 122 123
opasig               : 12 16 24
opno                 : 111 112
oprel                : 113 114 116
opy                  : 109 110 112
otro                 : 97
params               : 46 47 48 50 55 64 65
params2              : 51 53 54
procedimiento        : 61
program              : 0
protfunc             : 42 45
protfuncproc         : 1
protproc             : 43 44
regresa              : 77
repetir              : 74
si                   : 70
signo                : 125 126
sino                 : 85
termino              : 127 128
udim                 : 96 107 136
uparams              : 138 152
valor                : 25 27 28
variables            : 1 64 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . constantes variables protfuncproc funcproc PROGRAMA block FIN DE PROGRAMA PUNTO
    (33) constantes -> . CONSTANTES gpoconst
    (34) constantes -> . empty
    (153) empty -> .

    CONSTANTES      shift and go to state 3
    VARIABLES       reduce using rule 153 (empty -> .)
    PROTOTIPOS      reduce using rule 153 (empty -> .)
    PROCEDIMIENTO   reduce using rule 153 (empty -> .)
    FUNCION         reduce using rule 153 (empty -> .)
    PROGRAMA        reduce using rule 153 (empty -> .)

    program                        shift and go to state 1
    constantes                     shift and go to state 2
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> constantes . variables protfuncproc funcproc PROGRAMA block FIN DE PROGRAMA PUNTO
    (2) variables -> . VARIABLES gpovars
    (3) variables -> . empty
    (153) empty -> .

    VARIABLES       shift and go to state 6
    PROTOTIPOS      reduce using rule 153 (empty -> .)
    PROCEDIMIENTO   reduce using rule 153 (empty -> .)
    FUNCION         reduce using rule 153 (empty -> .)
    PROGRAMA        reduce using rule 153 (empty -> .)

    variables                      shift and go to state 5
    empty                          shift and go to state 7

state 3

    (33) constantes -> CONSTANTES . gpoconst
    (35) gpoconst -> . IDENT OP_ASIG CTE_ENTERA PUNTO_COMA
    (36) gpoconst -> . IDENT OP_ASIG CTE_ENTERA PUNTO_COMA gpoconst
    (37) gpoconst -> . IDENT OP_ASIG CTE_REAL PUNTO_COMA
    (38) gpoconst -> . IDENT OP_ASIG CTE_REAL PUNTO_COMA gpoconst
    (39) gpoconst -> . empty
    (102) gpoconst -> . CTE_ALFA gpoconst2
    (153) empty -> .

    IDENT           shift and go to state 9
    CTE_ALFA        shift and go to state 11
    VARIABLES       reduce using rule 153 (empty -> .)
    PROTOTIPOS      reduce using rule 153 (empty -> .)
    PROCEDIMIENTO   reduce using rule 153 (empty -> .)
    FUNCION         reduce using rule 153 (empty -> .)
    PROGRAMA        reduce using rule 153 (empty -> .)

    gpoconst                       shift and go to state 8
    empty                          shift and go to state 10

state 4

    (34) constantes -> empty .

    VARIABLES       reduce using rule 34 (constantes -> empty .)
    PROTOTIPOS      reduce using rule 34 (constantes -> empty .)
    PROCEDIMIENTO   reduce using rule 34 (constantes -> empty .)
    FUNCION         reduce using rule 34 (constantes -> empty .)
    PROGRAMA        reduce using rule 34 (constantes -> empty .)


state 5

    (1) program -> constantes variables . protfuncproc funcproc PROGRAMA block FIN DE PROGRAMA PUNTO
    (40) protfuncproc -> . PROTOTIPOS gpofuncproc FIN DE PROTOTIPOS PUNTO_COMA
    (41) protfuncproc -> . empty
    (153) empty -> .

    PROTOTIPOS      shift and go to state 13
    PROCEDIMIENTO   reduce using rule 153 (empty -> .)
    FUNCION         reduce using rule 153 (empty -> .)
    PROGRAMA        reduce using rule 153 (empty -> .)

    protfuncproc                   shift and go to state 12
    empty                          shift and go to state 14

state 6

    (2) variables -> VARIABLES . gpovars
    (4) gpovars -> . gpoids PUNTOS_DOBLES TIPO PUNTO_COMA gpovars
    (5) gpovars -> . gpoids PUNTOS_DOBLES TIPO PUNTO_COMA
    (6) gpovars -> . empty
    (7) gpovars -> . gpoids error TIPO PUNTO_COMA gpovars
    (8) gpovars -> . gpoids error TIPO PUNTO_COMA
    (9) gpovars -> . gpoids PUNTOS_DOBLES error PUNTO_COMA gpovars
    (10) gpovars -> . gpoids PUNTOS_DOBLES error PUNTO_COMA
    (11) gpoids -> . IDENT COMA gpoidsinner
    (12) gpoids -> . IDENT opasig COMA gpoidsinner
    (13) gpoids -> . IDENT dimens COMA gpoidsinner
    (14) gpoids -> . IDENT dimens
    (20) gpoids -> . empty
    (22) gpoids -> . IDENT dimens error gpoids
    (23) gpoids -> . IDENT error gpoids
    (24) gpoids -> . IDENT opasig error gpoids
    (153) empty -> .

    IDENT           shift and go to state 18
    PROTOTIPOS      reduce using rule 153 (empty -> .)
    PROCEDIMIENTO   reduce using rule 153 (empty -> .)
    FUNCION         reduce using rule 153 (empty -> .)
    PROGRAMA        reduce using rule 153 (empty -> .)
    INICIO          reduce using rule 153 (empty -> .)
    PUNTOS_DOBLES   reduce using rule 153 (empty -> .)
    error           reduce using rule 153 (empty -> .)

    gpovars                        shift and go to state 15
    gpoids                         shift and go to state 16
    empty                          shift and go to state 17

state 7

    (3) variables -> empty .

    PROTOTIPOS      reduce using rule 3 (variables -> empty .)
    PROCEDIMIENTO   reduce using rule 3 (variables -> empty .)
    FUNCION         reduce using rule 3 (variables -> empty .)
    PROGRAMA        reduce using rule 3 (variables -> empty .)
    INICIO          reduce using rule 3 (variables -> empty .)


state 8

    (33) constantes -> CONSTANTES gpoconst .

    VARIABLES       reduce using rule 33 (constantes -> CONSTANTES gpoconst .)
    PROTOTIPOS      reduce using rule 33 (constantes -> CONSTANTES gpoconst .)
    PROCEDIMIENTO   reduce using rule 33 (constantes -> CONSTANTES gpoconst .)
    FUNCION         reduce using rule 33 (constantes -> CONSTANTES gpoconst .)
    PROGRAMA        reduce using rule 33 (constantes -> CONSTANTES gpoconst .)


state 9

    (35) gpoconst -> IDENT . OP_ASIG CTE_ENTERA PUNTO_COMA
    (36) gpoconst -> IDENT . OP_ASIG CTE_ENTERA PUNTO_COMA gpoconst
    (37) gpoconst -> IDENT . OP_ASIG CTE_REAL PUNTO_COMA
    (38) gpoconst -> IDENT . OP_ASIG CTE_REAL PUNTO_COMA gpoconst

    OP_ASIG         shift and go to state 19


state 10

    (39) gpoconst -> empty .

    VARIABLES       reduce using rule 39 (gpoconst -> empty .)
    PROTOTIPOS      reduce using rule 39 (gpoconst -> empty .)
    PROCEDIMIENTO   reduce using rule 39 (gpoconst -> empty .)
    FUNCION         reduce using rule 39 (gpoconst -> empty .)
    PROGRAMA        reduce using rule 39 (gpoconst -> empty .)
    PUNTOS_DOBLES   reduce using rule 39 (gpoconst -> empty .)


state 11

    (102) gpoconst -> CTE_ALFA . gpoconst2
    (104) gpoconst2 -> . COMA gpoconst3
    (105) gpoconst2 -> . empty
    (153) empty -> .

    COMA            shift and go to state 21
    VARIABLES       reduce using rule 153 (empty -> .)
    PROTOTIPOS      reduce using rule 153 (empty -> .)
    PROCEDIMIENTO   reduce using rule 153 (empty -> .)
    FUNCION         reduce using rule 153 (empty -> .)
    PROGRAMA        reduce using rule 153 (empty -> .)
    PUNTOS_DOBLES   reduce using rule 153 (empty -> .)

    gpoconst2                      shift and go to state 20
    empty                          shift and go to state 22

state 12

    (1) program -> constantes variables protfuncproc . funcproc PROGRAMA block FIN DE PROGRAMA PUNTO
    (61) funcproc -> . procedimiento funcproc
    (62) funcproc -> . funcion funcproc
    (63) funcproc -> . empty
    (64) procedimiento -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA
    (65) funcion -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA
    (153) empty -> .

    PROCEDIMIENTO   shift and go to state 27
    FUNCION         shift and go to state 28
    PROGRAMA        reduce using rule 153 (empty -> .)

    funcproc                       shift and go to state 23
    procedimiento                  shift and go to state 24
    funcion                        shift and go to state 25
    empty                          shift and go to state 26

state 13

    (40) protfuncproc -> PROTOTIPOS . gpofuncproc FIN DE PROTOTIPOS PUNTO_COMA
    (42) gpofuncproc -> . protfunc
    (43) gpofuncproc -> . protproc
    (44) gpofuncproc -> . protproc gpofuncproc
    (45) gpofuncproc -> . protfunc gpofuncproc
    (46) protfunc -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO PUNTO_COMA
    (47) protfunc -> . FUNCION error PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO PUNTO_COMA
    (48) protproc -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTO_COMA
    (49) protproc -> . empty
    (50) protproc -> . PROCEDIMIENTO error PAREN_EMPIEZA params PAREN_TERMINA PUNTO_COMA
    (153) empty -> .

  ! shift/reduce conflict for FUNCION resolved as shift
  ! shift/reduce conflict for PROCEDIMIENTO resolved as shift
    FUNCION         shift and go to state 32
    PROCEDIMIENTO   shift and go to state 33
    FIN             reduce using rule 153 (empty -> .)

  ! FUNCION         [ reduce using rule 153 (empty -> .) ]
  ! PROCEDIMIENTO   [ reduce using rule 153 (empty -> .) ]

    gpofuncproc                    shift and go to state 29
    protfunc                       shift and go to state 30
    protproc                       shift and go to state 31
    empty                          shift and go to state 34

state 14

    (41) protfuncproc -> empty .

    PROCEDIMIENTO   reduce using rule 41 (protfuncproc -> empty .)
    FUNCION         reduce using rule 41 (protfuncproc -> empty .)
    PROGRAMA        reduce using rule 41 (protfuncproc -> empty .)


state 15

    (2) variables -> VARIABLES gpovars .

    PROTOTIPOS      reduce using rule 2 (variables -> VARIABLES gpovars .)
    PROCEDIMIENTO   reduce using rule 2 (variables -> VARIABLES gpovars .)
    FUNCION         reduce using rule 2 (variables -> VARIABLES gpovars .)
    PROGRAMA        reduce using rule 2 (variables -> VARIABLES gpovars .)
    INICIO          reduce using rule 2 (variables -> VARIABLES gpovars .)


state 16

    (4) gpovars -> gpoids . PUNTOS_DOBLES TIPO PUNTO_COMA gpovars
    (5) gpovars -> gpoids . PUNTOS_DOBLES TIPO PUNTO_COMA
    (7) gpovars -> gpoids . error TIPO PUNTO_COMA gpovars
    (8) gpovars -> gpoids . error TIPO PUNTO_COMA
    (9) gpovars -> gpoids . PUNTOS_DOBLES error PUNTO_COMA gpovars
    (10) gpovars -> gpoids . PUNTOS_DOBLES error PUNTO_COMA

    PUNTOS_DOBLES   shift and go to state 35
    error           shift and go to state 36


state 17

    (6) gpovars -> empty .
    (20) gpoids -> empty .

    PROTOTIPOS      reduce using rule 6 (gpovars -> empty .)
    PROCEDIMIENTO   reduce using rule 6 (gpovars -> empty .)
    FUNCION         reduce using rule 6 (gpovars -> empty .)
    PROGRAMA        reduce using rule 6 (gpovars -> empty .)
    INICIO          reduce using rule 6 (gpovars -> empty .)
    PUNTOS_DOBLES   reduce using rule 20 (gpoids -> empty .)
    error           reduce using rule 20 (gpoids -> empty .)


state 18

    (11) gpoids -> IDENT . COMA gpoidsinner
    (12) gpoids -> IDENT . opasig COMA gpoidsinner
    (13) gpoids -> IDENT . dimens COMA gpoidsinner
    (14) gpoids -> IDENT . dimens
    (22) gpoids -> IDENT . dimens error gpoids
    (23) gpoids -> IDENT . error gpoids
    (24) gpoids -> IDENT . opasig error gpoids
    (29) opasig -> . OP_ASIG CTE_ENTERA
    (30) opasig -> . OP_ASIG IDENT
    (31) opasig -> . empty
    (25) dimens -> . CORCHETE_EMPIEZA valor CORCHETE_TERMINA dimens
    (26) dimens -> . empty
    (27) dimens -> . CORCHETE_EMPIEZA valor error dimens
    (28) dimens -> . error valor CORCHETE_TERMINA dimens
    (153) empty -> .

  ! shift/reduce conflict for COMA resolved as shift
  ! shift/reduce conflict for error resolved as shift
    COMA            shift and go to state 37
    error           shift and go to state 40
    OP_ASIG         shift and go to state 41
    CORCHETE_EMPIEZA shift and go to state 43
    PUNTOS_DOBLES   reduce using rule 153 (empty -> .)

  ! COMA            [ reduce using rule 153 (empty -> .) ]
  ! error           [ reduce using rule 153 (empty -> .) ]

    opasig                         shift and go to state 38
    dimens                         shift and go to state 39
    empty                          shift and go to state 42

state 19

    (35) gpoconst -> IDENT OP_ASIG . CTE_ENTERA PUNTO_COMA
    (36) gpoconst -> IDENT OP_ASIG . CTE_ENTERA PUNTO_COMA gpoconst
    (37) gpoconst -> IDENT OP_ASIG . CTE_REAL PUNTO_COMA
    (38) gpoconst -> IDENT OP_ASIG . CTE_REAL PUNTO_COMA gpoconst

    CTE_ENTERA      shift and go to state 44
    CTE_REAL        shift and go to state 45


state 20

    (102) gpoconst -> CTE_ALFA gpoconst2 .

    VARIABLES       reduce using rule 102 (gpoconst -> CTE_ALFA gpoconst2 .)
    PROTOTIPOS      reduce using rule 102 (gpoconst -> CTE_ALFA gpoconst2 .)
    PROCEDIMIENTO   reduce using rule 102 (gpoconst -> CTE_ALFA gpoconst2 .)
    FUNCION         reduce using rule 102 (gpoconst -> CTE_ALFA gpoconst2 .)
    PROGRAMA        reduce using rule 102 (gpoconst -> CTE_ALFA gpoconst2 .)
    PUNTOS_DOBLES   reduce using rule 102 (gpoconst -> CTE_ALFA gpoconst2 .)


state 21

    (104) gpoconst2 -> COMA . gpoconst3
    (103) gpoconst3 -> . CTE_ALFA gpoconst2

    CTE_ALFA        shift and go to state 47

    gpoconst3                      shift and go to state 46

state 22

    (105) gpoconst2 -> empty .

    VARIABLES       reduce using rule 105 (gpoconst2 -> empty .)
    PROTOTIPOS      reduce using rule 105 (gpoconst2 -> empty .)
    PROCEDIMIENTO   reduce using rule 105 (gpoconst2 -> empty .)
    FUNCION         reduce using rule 105 (gpoconst2 -> empty .)
    PROGRAMA        reduce using rule 105 (gpoconst2 -> empty .)
    PUNTOS_DOBLES   reduce using rule 105 (gpoconst2 -> empty .)


state 23

    (1) program -> constantes variables protfuncproc funcproc . PROGRAMA block FIN DE PROGRAMA PUNTO

    PROGRAMA        shift and go to state 48


state 24

    (61) funcproc -> procedimiento . funcproc
    (61) funcproc -> . procedimiento funcproc
    (62) funcproc -> . funcion funcproc
    (63) funcproc -> . empty
    (64) procedimiento -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA
    (65) funcion -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA
    (153) empty -> .

    PROCEDIMIENTO   shift and go to state 27
    FUNCION         shift and go to state 28
    PROGRAMA        reduce using rule 153 (empty -> .)

    procedimiento                  shift and go to state 24
    funcproc                       shift and go to state 49
    funcion                        shift and go to state 25
    empty                          shift and go to state 26

state 25

    (62) funcproc -> funcion . funcproc
    (61) funcproc -> . procedimiento funcproc
    (62) funcproc -> . funcion funcproc
    (63) funcproc -> . empty
    (64) procedimiento -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA
    (65) funcion -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA
    (153) empty -> .

    PROCEDIMIENTO   shift and go to state 27
    FUNCION         shift and go to state 28
    PROGRAMA        reduce using rule 153 (empty -> .)

    funcion                        shift and go to state 25
    funcproc                       shift and go to state 50
    procedimiento                  shift and go to state 24
    empty                          shift and go to state 26

state 26

    (63) funcproc -> empty .

    PROGRAMA        reduce using rule 63 (funcproc -> empty .)


state 27

    (64) procedimiento -> PROCEDIMIENTO . IDENT PAREN_EMPIEZA params PAREN_TERMINA variables INICIO block FIN DE PROCEDIMIENTO PUNTO_COMA

    IDENT           shift and go to state 51


state 28

    (65) funcion -> FUNCION . IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO variables INICIO block FIN DE FUNCION PUNTO_COMA

    IDENT           shift and go to state 52


state 29

    (40) protfuncproc -> PROTOTIPOS gpofuncproc . FIN DE PROTOTIPOS PUNTO_COMA

    FIN             shift and go to state 53


state 30

    (42) gpofuncproc -> protfunc .
    (45) gpofuncproc -> protfunc . gpofuncproc
    (42) gpofuncproc -> . protfunc
    (43) gpofuncproc -> . protproc
    (44) gpofuncproc -> . protproc gpofuncproc
    (45) gpofuncproc -> . protfunc gpofuncproc
    (46) protfunc -> . FUNCION IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO PUNTO_COMA
    (47) protfunc -> . FUNCION error PAREN_EMPIEZA params PAREN_TERMINA PUNTOS_DOBLES TIPO PUNTO_COMA
    (48) protproc -> . PROCEDIMIENTO IDENT PAREN_EMPIEZA params PAREN_TERMINA PUNTO_COMA
    (49) protproc -> . empty
    (50) protproc -> . PROCEDIMIENTO error PAREN_EMPIEZA params PAREN_TERMINA PUNTO_COMA
    (153) empty -> .

  ! shift/reduce conflict for FUNCION resolved as shift
  ! shift/reduce conflict for PROCEDIMIENTO resolved as shift
  ! reduce/reduce conflict for FIN resolved using rule 42 (gpofuncproc -> protfunc .)
    FIN             reduce using rule 42 (gpofuncproc -> protfunc .)
    FUNCION         shift and go to state 32
    PROCEDIMIENTO   shift and go to state 33

  ! FUNCION         [ reduce using rule 153 (empty -> .) ]
  ! PROCEDIMIENTO   [ reduce using rule 153 (empty -> .) ]
  ! FIN             [ reduce using rule 153 (empty -> .) ]

    protfunc                       shift and go to state 30
    gpofuncproc                    shift and go to state 54
    protproc                       shift and go to state 31
    empty                          shift and go to state 34

state 31
